# youtube-thumbnail-generator

./: LICENSE  README.md  api_test.py  app.py  main.py  pyproject.toml
prompts/: prompt_manager.py
prompts/templates/: main_prompt_template.j2
