[project]
name = "youtube-thumbnail-generator"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "google-genai>=1.45.0",
    "pillow>=12.0.0",
    "python-dotenv>=1.1.1",
    "standard-imghdr>=3.13.0",
    "streamlit>=1.22.0",
]
